--- a/gb/19/9/24/n11543918.md
+++ b/gb/19/9/24/n11543918.md
@@ -1,60 +1,59 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zkouno3802/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/zkouno3802/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zkouno3802/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zkouno3802/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zkouno3802/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>2019TIAF影展 推荐多部国际获奖作品</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/09/20190922-TIAF-04-600x400.jpg" />
 <h6></h6>
 <hr>
-	<p>【大纪元2019年09月24日讯】（大纪元记者杨逸帆报导）2019TIAF台中国际动画影展预售票开卖（9月13日）至今，预售成绩已超越历年同期纪录，除了《海兽之子》在开卖当天旋即完售外，开幕片《冲出迷境》及闭幕片《喀布尔之燕》等长片也都卖出佳绩，主办单位趁胜追击，再推荐多部国际影展获奖的精彩作品，包括《<ahref="https://github.com/zkouno3802/djy/blob/master/gb/tag/%E7%8E%8B%E5%AD%90%E7%9A%84%E6%97%B6%E7%A9%BA%E6%97%85%E7%A8%8B.md#1">王子的时空旅程</a>》（The Prince&#8217;s Voyage）及《<ahref="https://github.com/zkouno3802/djy/blob/master/gb/tag/%E8%B6%85%E6%A3%92%E8%9B%8B%E7%B3%95.md#1">超棒蛋糕</a>！》（This Magnificent Cake!），也将在台中国际动画影展独家放送。<br />
-<figure id="attachment_11543971" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/09/20190922-TIAF-01.jpg"><img src="https://i.epochtimes.com/assets/uploads/2019/09/20190922-TIAF-01-600x338.jpg" alt="《王子的时空旅程》" width="600" b="338" class="size-large wp-image-11543971" /></a><figcaption class="wp-caption-text">《噜噜米漫游蔚蓝海岸》导演新作《<ahref="https://github.com/zkouno3802/djy/blob/master/gb/tag/%E7%8E%8B%E5%AD%90%E7%9A%84%E6%97%B6%E7%A9%BA%E6%97%85%E7%A8%8B.md#1">王子的时空旅程</a>》打造一场猴王子与男孩的奇幻情谊。（台中国际动画影展提供）</figcaption></figure></p>
+	<p>【大纪元2019年09月24日讯】（大纪元记者杨逸帆报导）2019TIAF台中国际动画影展预售票开卖（9月13日）至今，预售成绩已超越历年同期纪录，除了《海兽之子》在开卖当天旋即完售外，开幕片《冲出迷境》及闭幕片《喀布尔之燕》等长片也都卖出佳绩，主办单位趁胜追击，再推荐多部国际影展获奖的精彩作品，包括《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%8E%8B%E5%AD%90%E7%9A%84%E6%97%B6%E7%A9%BA%E6%97%85%E7%A8%8B.md#1">王子的时空旅程</a>》（The Prince&#8217;s Voyage）及《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B6%85%E6%A3%92%E8%9B%8B%E7%B3%95.md#1">超棒蛋糕</a>！》（This Magnificent Cake!），也将在台中国际动画影展独家放送。<br />
+<figure id="attachment_11543971" aria-describedby="caption-attachment-11543971" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/09/20190922-TIAF-01.jpg"><img src="https://i.epochtimes.com/assets/uploads/2019/09/20190922-TIAF-01-600x338.jpg" alt="《王子的时空旅程》" width="600" b="338" class="size-large wp-image-11543971" /></a><figcaption id="caption-attachment-11543971" class="wp-caption-text">《噜噜米漫游蔚蓝海岸》导演新作《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%8E%8B%E5%AD%90%E7%9A%84%E6%97%B6%E7%A9%BA%E6%97%85%E7%A8%8B.md#1">王子的时空旅程</a>》打造一场猴王子与男孩的奇幻情谊。（台中国际动画影展提供）</figcaption></figure></p>
 <p>《王子的时空旅程》描述一位来自不知名国度的猴王子在海边被男孩发现，在男孩的科学家父母帮助下，猴王子发现自己竟跨越了时空，曾因为提出有其他文明存在而遭到排挤的科学家父母，于是计划利用这位猴王子展开一场反击，本片导演除了《噜噜米漫游蔚蓝海岸》导演萨维亚皮卡以外，还有《海边的路易丝》导演尚弗朗索瓦拉吉奥，该片在安锡动画影展及卢卡诺影展都获得奖项肯定。</p>
-<p>去年在世界四大动画影展之一的“萨格勒布动画影展”长片动画竞赛获得首奖的《<ahref="https://github.com/zkouno3802/djy/blob/master/gb/tag/%E8%B6%85%E6%A3%92%E8%9B%8B%E7%B3%95.md#1">超棒蛋糕</a>！》，以19世纪末的欧洲为背景，描写五位看似无关的角色：抱着侵略梦疯狂打嗝的西班牙国王、替有钱白人当人型烟灰缸的非洲矮人、流浪丛林的逃兵青年、意外落水的原住民搬运工、脾气暴躁的失败商人；这些角色围绕在地中海的两岸，编织出一场既是离奇荒谬的冒险故事，本片也接连获选坎城影展、安锡影展，并入围动画界奥斯卡的“美国安妮奖”。</p>
-<figure id="attachment_11543972" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/09/20190922-TIAF-02.jpg"><img src="https://i.epochtimes.com/assets/uploads/2019/09/20190922-TIAF-02-600x360.jpg" alt="《超棒蛋糕！》" width="600" b="360" class="size-large wp-image-11543972" /></a><figcaption class="wp-caption-text">萨格勒布动画影展首奖《超棒蛋糕！》描述5位主角围绕在地中海周边遭遇的事件。（台中国际动画影展提供）</figcaption></figure>
+<p>去年在世界四大动画影展之一的“萨格勒布动画影展”长片动画竞赛获得首奖的《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B6%85%E6%A3%92%E8%9B%8B%E7%B3%95.md#1">超棒蛋糕</a>！》，以19世纪末的欧洲为背景，描写五位看似无关的角色：抱着侵略梦疯狂打嗝的西班牙国王、替有钱白人当人型烟灰缸的非洲矮人、流浪丛林的逃兵青年、意外落水的原住民搬运工、脾气暴躁的失败商人；这些角色围绕在地中海的两岸，编织出一场既是离奇荒谬的冒险故事，本片也接连获选坎城影展、安锡影展，并入围动画界奥斯卡的“美国安妮奖”。</p>
+<figure id="attachment_11543972" aria-describedby="caption-attachment-11543972" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/09/20190922-TIAF-02.jpg"><img src="https://i.epochtimes.com/assets/uploads/2019/09/20190922-TIAF-02-600x360.jpg" alt="《超棒蛋糕！》" width="600" b="360" class="size-large wp-image-11543972" /></a><figcaption id="caption-attachment-11543972" class="wp-caption-text">萨格勒布动画影展首奖《超棒蛋糕！》描述5位主角围绕在地中海周边遭遇的事件。（台中国际动画影展提供）</figcaption></figure>
 <p>本届台中国际动画影展与波兰“克拉科夫动画影展”（The International Film Festival Etiuda &#038; Anima）合作，推荐八部近年在国际屡获好评的动画作品，艺术总监博古丝劳母津斯基表示，波兰动画受战后文化的影响，造就电影艺术的百花齐放，许多导演透过动画表达社会与政治倾向，也造就波兰动画独树一格的艺术学派，这次与台中国际动画影展的合作，期望可让台湾观众看到更多元丰富的波兰动画电影。</p>
 <p>而邀请台湾动画学者张晏榕策画的“叙事变奏曲”单元，则展现出多部叙事节奏不同的动画作品，包括广岛动画影展特奖作品《心弦》（Threads）、捷克动画影展国际短片首奖作品《布景人生》（Scenery）等，从中看见动画的无限可能。</p>
-<p><ahref="https://github.com/zkouno3802/djy/blob/master/gb/tag/2019%E5%8F%B0%E4%B8%AD%E5%9B%BD%E9%99%85%E5%8A%A8%E7%94%BB%E5%BD%B1%E5%B1%95.md#1">2019台中国际动画影展</a>将于10月11日（五）至10月20日（日）在台中凯擘影城举行，为了造福影迷朋友们，影展更推出“上班也要看影展五日通行证”，9月13日起于全台ibon售票系统开卖预售票，当然除了影展期间电影放映外，今年还举办多场免费放映等活动，活动详情可上官方网站查询。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/2019%E5%8F%B0%E4%B8%AD%E5%9B%BD%E9%99%85%E5%8A%A8%E7%94%BB%E5%BD%B1%E5%B1%95.md#1">2019台中国际动画影展</a>将于10月11日（五）至10月20日（日）在台中凯擘影城举行，为了造福影迷朋友们，影展更推出“上班也要看影展五日通行证”，9月13日起于全台ibon售票系统开卖预售票，当然除了影展期间电影放映外，今年还举办多场免费放映等活动，活动详情可上官方网站查询。</p>
 <p>责任编辑：辛幼安</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/7/2/7/n1616361.md#1">台美官员：TIAF是当前推动经贸合作最佳平台</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/7/3/13/n1644175.md#1">台湾国际动画影展  线上报名机制启动</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/7/8/1/n1788696.md#1">台湾动画奖入围名单揭晓38部影片入选　　</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/7/10/2/n1853950.md#1">台湾动画奖揭晓  张崑逸“衍生”获TIAF大奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/2/7/n1616361.md#1">台美官员：TIAF是当前推动经贸合作最佳平台</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/3/13/n1644175.md#1">台湾国际动画影展  线上报名机制启动</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/8/1/n1788696.md#1">台湾动画奖入围名单揭晓38部影片入选　　</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/10/2/n1853950.md#1">台湾动画奖揭晓  张崑逸“衍生”获TIAF大奖</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/23/n11539563.md#1" target="_blank">鸿路：最后的双十节</a></li><li><a href="https://github.com/zkouno3802/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/6/n7526736.md#1" target="_blank">绝处逢生 令药学业同行目瞪口呆的神迹</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/29/n10096052.md#1" target="_blank">郑兢业：人吃与吃人（四 ）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/9/12/n4526041.md#1" target="_blank">子华：谁是真正破坏社会安定的人</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/3/n12378228.md#1">明朝神奇歌谣 寥寥数语 隐含天下变局</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/13/n12400103.md#1">【命理】羊刃为何可怕 为何叫凶星恶煞？</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/12/n12397963.md#1">【大时代华人】一根“牙签”背后的爱情</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/13/n12399903.md#1">古今六大预言 2020年前后的大交集(下)</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/15/n12404593.md#1">中国古代神奇的透光镜 会呈现背面图案</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/21/n12420667.md#1">【新闻看点】中共威胁台湾泄困境 打台恐很惨</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/20/n12418048.md#1">【新闻第一现场】北京传爆炸 火光冲天陆媒噤声</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/22/n12421155.md#1">【拍案惊奇】中共管控党员怕分裂 紧盯境外提款</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/20/n12416652.md#1">G20大阪峰会习近平遇尴尬 视频再度热传</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/17/n12411129.md#1">中美芯片数据对比 告诉你竞争的现实</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/20/n12417511.md#1">中共又“辟谣”银行挤兑事件 自曝金融危机</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/21/n12419241.md#1">黄鸿升灵堂开放最终日 林俊杰等艺人到场悼念</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/21/n12419394.md#1">吴宗宪写歌忆黄鸿升 泪唱去天堂行李带够吗</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/19/n12416205.md#1">全球疫情仍凶险 唐绮阳：感恩台湾如诺亚方舟</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/20/n12416699.md#1">子瑜中秋假期回不了台湾 与Elkie相约吃月饼</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/20/n12417573.md#1">共军模拟炸关岛基地 视频被揭盗用三部美国片</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/21/n12419160.md#1">中共称新手驾歼-20击落17架敌机 印媒：宣传</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/20/n12416956.md#1">印度边境秘密部队多由藏人组成 原因为何？</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/4/n12381760.md#1">【线上活动】远离骨折 骨质疏松！保骨大作战</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/16/n12406419.md#1">增肌除了蛋白质 一定要吃糖类！怎样吃最有效</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/20/n12416698.md#1">中国5名“外包杀手” 获搞笑诺贝尔奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zkouno3802/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zkouno3802/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/24/n11543918.htm">2019TIAF影展 推荐多部国际获奖作品</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/24/n11543918.htm">2019TIAF影展 推荐多部国际获奖作品</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zkouno3802/djy/blob/master/gb/19/9/24/n11543918.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zkouno3802/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zkouno3802/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zkouno3802/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/9/24/n11543918.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
